--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
     "react": "https://esm.sh/react@^19.2.3",
     "recharts": "https://esm.sh/recharts@^3.6.0",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "vite": "https://esm.sh/vite@^7.3.1"
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vercel/edge-config": "https://esm.sh/@vercel/edge-config@^1.4.3",
+    "firebase/": "https://esm.sh/firebase@^12.7.0/"
   }
 }
 </script>
